--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Firebase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="assets/css/styles.css" />
-</head>
+  </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -17,10 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
+                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signin-modal">Signin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Signup</a>
+                <a class="nav-link logged-out" href="#" data-bs-toggle="modal" data-bs-target="#signup-modal">Signup</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link logged-in" id="logout" href="#">Logout</a>
               </li>
             </ul>
           </div>
@@ -36,32 +40,39 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="">
-                        <label for="" class="mb-1">Email</label>
-                        <input type="email" class="form-control mb-3" placeholder="Email" required>
-                        <label for="" class="mb-1">Password</label>
-                        <input type="password" class="form-control mb-3" placeholder="******" required>
-                        <button class="btn btn-primary">Login</button>
+                    <form id="signin-form">
+                        <label for="email-signin" class="mb-1">Email</label>
+                        <input id="email-signin" type="email" class="form-control mb-3" placeholder="Email" required>
+                        <label for="password-signin" for="" class="mb-1">Password</label>
+                        <input id="password-signin" type="password" class="form-control mb-3" placeholder="******" required>
+                        <button type="submit" class="btn btn-primary">Login</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Signin modal -->
+    <!-- Signup modal -->
     <div class="modal fade" id="signup-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Signup</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                  <form id="signup-form">
+                    <label for="email-signup" class="mb-1">Email</label>
+                    <input id="email-signup" type="email" class="form-control mb-3" placeholder="Email" required>
+                    <label for="password-signup" class="mb-1">Password</label>
+                    <input id="password-signup" type="password" class="form-control mb-3" placeholder="******" required>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                  </form>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
