--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
                     <form id="signin-form">
                         <label for="email-signin" class="mb-1">Email</label>
                         <input id="email-signin" type="email" class="form-control mb-3" placeholder="Email" required>
-                        <label for="password-signin" for="" class="mb-1">Password</label>
+                        <label for="password-signin" for="password-signin" class="mb-1">Password</label>
                         <input id="password-signin" type="password" class="form-control mb-3" placeholder="******" required>
-                        <button type="submit" class="btn btn-primary">Login</button>
-                    </form>
+                        <button type="submit" class="btn btn-primary form-control mb-2">Login</button>
+                        <hr />
+                        <button id="google-login" class="btn btn-info">Google</button>
+                      </form>
                 </div>
             </div>
         </div>
