--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <input type="text" id="task-title" />
           <label for="task-content">Content:</label>
           <textarea id="task-content" cols="30" rows="5"></textarea>
-          <button type="submit">Create Task</button>
+          <button type="submit" id="btn-task-save">Create Task</button>
         </form>
       </div>
     </div>
