--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link href="assets/css/styles.css" />
 </head>
 <body>
-  <!--Prueba sijtdhkjsdhgijksd--> 
-  <!--Prueba de trabajo colaborativooooooooooo-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">FireApp</a>
@@ -34,7 +32,7 @@
   </nav>
   <h1>Autenticación con Firebase</h1>
 
-  <main class="row w-75 mx-auto">
+  <main class="row w-75 mx-auto" id="task-main-container">
     <div class="col-md-6" id="task-form-container">
       <div id="create-tasks">
         <form id="create-form">
@@ -46,7 +44,6 @@
         </form>
       </div>
     </div>
-  
     <!-- Acá se mostrarán las tasks de la base de datos -->
     <div class="col-md-6" id="tasks-container"></div>
   </main>
